[package]
name = "velcro"
version = "0.2.1"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"
description = """
A convenience macro for initializing vectors.
"""
documentation = "https://docs.rs/velcro/latest/velcro"
homepage = "https://github.com/peterjoel/velcro"
repository = "https://github.com/peterjoel/velcro"
keywords = ["vec", "vector", "macro"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
velcro_macros = { version = "=0.2.1", path = "macros" }
