[package]
name = "velcro_core"
version = "0.4.0"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"
description = """
Core dependencies used by the `velcro` crate. See `velcro` for documentation.

It is not advised to depend on this crate directly; it is an internal 
dependency of `velcro` and may be subject to breaking changes. 
"""
documentation = "https://docs.rs/velcro/latest/velcro"
homepage = "https://github.com/peterjoel/velcro"
repository = "https://github.com/peterjoel/velcro"
keywords = []
categories = ["data-structures", "rust-patterns"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
