[package]
name = "velcro_core"
version = "0.5.4"
authors = ["Peter Hall <peterjoel@gmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"
description = """
Core dependencies used by the `velcro` crate. See `velcro` for documentation.

It is not advised to depend on this crate directly; it is an internal 
dependency of `velcro` and may be subject to breaking changes. 
"""
documentation = "https://docs.rs/velcro/latest/velcro"
homepage = "https://github.com/peterjoel/velcro"
repository = "https://github.com/peterjoel/velcro"
keywords = []
categories = ["data-structures", "rust-patterns"]

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.89"

[dev-dependencies]
syn = { version = "2.0.89", features = ["extra-traits"] }
